--- a/style.css
+++ b/style.css
@@ -34,6 +34,9 @@ body {
    );
    background-size: 1400% 100%;
    color: transparent;
+   -webkit-text-fill-color: transparent;
+   -webkit-background-clip: text;
+   -moz-background-clip: text;
    background-clip: text;
    animation: rainbow-animation 2s ease infinite;
 }
