--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
    display: flex;
    align-items: center;
    flex-direction: column;
-   padding: 2rem;
+   padding-top: 2rem;
 }
 
 .title {
