--- a/style.css
+++ b/style.css
@@ -22,7 +22,16 @@ body {
    margin-bottom: 2rem;
 }
 .title_animation {
-   background: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet);
+   background: linear-gradient(
+      to right,
+      red,
+      orange,
+      yellow,
+      green,
+      blue,
+      indigo,
+      violet
+   );
    background-size: 1400% 100%;
    color: transparent;
    -webkit-text-fill-color: transparent;
@@ -55,11 +64,15 @@ body {
    justify-content: space-between;
    align-items: center;
    margin-top: 5px;
+   gap: 1rem;
    color: #bcbcbc;
    font-size: 1rem;
 }
 .darker {
    color: #828282;
+}
+.symbols {
+   word-break: break-all;
 }
 .checkbox {
    user-select: none;
@@ -70,6 +83,7 @@ body {
 .result {
    width: var(--width);
    min-height: 200px;
+   max-height: calc(100% - 14rem);
    margin-top: 1rem;
    border-radius: 10px;
    background-color: #3c3c3c;
@@ -102,6 +116,37 @@ body {
    word-wrap: break-word;
 }
 
+.author {
+   position: absolute;
+   bottom: 0.5rem;
+   display: flex;
+   gap: 15px;
+}
+.logo {
+   width: 25px;
+   height: 25px;
+}
+.author_name {
+   color: #b5b5b5;
+   font-size: 0.8rem;
+   transition: color 0.2s, text-decoration 0.2s;
+   text-decoration: none;
+}
+.author_name:hover {
+   color: #7f7f7f;
+   text-decoration: underline;
+}
+.through {
+   text-decoration: line-through;
+}
+.social {
+   display: flex;
+   align-items: center;
+   flex-direction: row;
+   justify-content: flex-end;
+   gap: 8px;
+}
+
 @keyframes rainbow-animation {
    0% {
       background-position: 0% 50%;
@@ -123,5 +168,17 @@ body {
    .sub {
       flex-direction: column;
       align-items: flex-start;
+   }
+}
+@media screen and (max-width: 480px) {
+   .result {
+      max-height: calc(100% - 17rem);
+   }
+   .author {
+      flex-direction: column;
+      gap: 5px;
+   }
+   .social:first-child {
+      flex-direction: row-reverse;
    }
 }
